--- a/css/bio.css
+++ b/css/bio.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 
-.petrobras {
+/*.petrobras {
     float: left;
     margin-left: 0;
 }
@@ -15,4 +15,30 @@
 .fiat {
     float: right;
     margin-right: 0;
+}*/
+
+.citacao-bio:nth-of-type(even){
+    float: left;
+    margin-left: 0;
+}
+
+.citacao-bio:nth-of-type(odd){
+    float: right;
+    margin-right: 0;
+}
+
+.citacao-bio:nth-of-type(even):hover,
+.citacao-bio:nth-of-type(even):focus{
+    position: relative;
+    box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.75);
+    z-index: 9999;
+    transform: scale(1.2) rotateZ(-5deg);
+}
+
+.citacao-bio:nth-of-type(odd):hover,
+.citacao-bio:nth-of-type(odd):focus{
+    position: relative;
+    box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.75);
+    z-index: 9999;
+    transform: scale(1.2) rotateZ(5deg);
 }
