--- a/css/bio.css
+++ b/css/bio.css
@@ -5,6 +5,13 @@
     margin: 1em 2em;
     width: 30ch;
     box-sizing: border-box;
+    transition: box-shadow 1s, transform 1s;
+    transition-delay: 1s, 0s;
+}
+
+.citacao-bio:hover,
+.citacao-bio:focus{
+    transition-delay: 0s, 1s;
 }
 
 /*.petrobras {
@@ -57,4 +64,43 @@
 
 .citacao-bio > p{
     position: relative;
+}
+
+thead th {
+    background-color: #3C1D3D;
+
+}
+
+tbody th{
+    background-color: #851944;
+ }
+
+th{
+    color: #FFF;
+    font-weight: bold;
+
+}
+
+td{
+    background-color: #EEE;
+    color: inherit;
+}
+
+table{
+    border-collapse: separate;
+    border-spacing: 0.25em;
+    margin: 1em 0;
+}
+
+th, td{
+    padding: 1em;
+}
+
+table [colspan]{
+    text-align: center;
+    font-style: italic;
+}
+
+table [rowspan]{
+    vertical-align: middle;
 }
